Cambios en la paleta de colores

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
     <div *ngIf="!animate" class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header  bg-info ">
+                <div class="card-header bg-secondary ">
                     <h2 class="card-title text-white mb-0">Acceso</h2>
                 </div>
                 <div class="card-body">
@@ -13,7 +13,8 @@
                     <form [formGroup]="newLogin" (ngSubmit)="onSubmit()">
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" formControlName="email" class="form-control" [class]="isValidField('email')" />
+                            <input type="email" formControlName="email" class="form-control"
+                                [class]="isValidField('email')" />
                             <div *ngIf="submitted && form.email.errors">
                                 <div>El correo: </div>
                                 <div *ngIf="form.email.errors.required">No puede estar vacío</div>
@@ -22,7 +23,8 @@
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" formControlName="password" class="form-control" [class]="isValidField('password')" />
+                            <input type="password" formControlName="password" class="form-control"
+                                [class]="isValidField('password')" />
                             <div *ngIf="submitted && form.password.errors">
                                 <div>La contraseña: </div>
                                 <div *ngIf="form.password.errors.required">No puede estar vacío</div>
@@ -33,18 +35,18 @@
                         <div>
 
                             <div class="text-right">
-                                <button type="submit" class="btn btn-info mr-2">
-                          Enviar
-                          <svg class="bi text-white" width="14" height="14" fill="currentColor">
-                            <use xlink:href="bootstrap-icons.svg#save" />
-                          </svg>
-                        </button>
+                                <button type="submit" class="btn btn-secondary mr-2">
+                                    Enviar
+                                    <svg class="bi text-white" width="14" height="14" fill="currentColor">
+                                        <use xlink:href="bootstrap-icons.svg#save" />
+                                    </svg>
+                                </button>
                                 <button type="reset" (click)="cancel()" class="btn btn-danger">
-                            Volver
-                            <svg class="bi text-white" width="14" height="14" fill="currentColor">
-                              <use xlink:href="bootstrap-icons.svg#save" />
-                            </svg>
-                          </button>
+                                    Volver
+                                    <svg class="bi text-white" width="14" height="14" fill="currentColor">
+                                        <use xlink:href="bootstrap-icons.svg#save" />
+                                    </svg>
+                                </button>
                             </div>
                         </div>
                         <div>{{message}}</div>
