--- a/src/app/pages/alumno/student-company-view/modal/company-data-m/company-data-m.component.html
+++ b/src/app/pages/alumno/student-company-view/modal/company-data-m/company-data-m.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header bg-info text-white">
+<div class="modal-header bg-secondary text-white">
     <h4 class="modal-title" id="modal-basic-title">Nombre empresa</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
         <svg class="bi text-white" width="32" height="32" fill="currentColor">
@@ -8,8 +8,8 @@
 </div>
 <div class="modal-body">
     <h5>Descripcion</h5>
-    <img src="https://image.freepik.com/vector-gratis/exito-empresa-buen-concepto-trabajo-equipo_81522-3909.jpg" 
-    alt="imagen-empresa" class="img-fluid w-50 h-50 mx-3 d-inline-flex float-left">
+    <img src="https://image.freepik.com/vector-gratis/exito-empresa-buen-concepto-trabajo-equipo_81522-3909.jpg"
+        alt="imagen-empresa" class="img-fluid w-50 h-50 mx-3 d-inline-flex float-left">
     Lorem fistrum diodeno a gramenawer caballo blanco caballo negroorl hasta luego Lucas te va a hasé pupitaa te va a
     hasé pupitaa te va a hasé pupitaa benemeritaar. Tiene musho peligro a wan diodeno hasta luego Lucas de la pradera
     torpedo papaar papaar diodeno va usté muy cargadoo qué dise usteer. Benemeritaar ese pedazo de a gramenawer jarl ese
