--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -35,29 +35,13 @@
                 </a>
             </li>
         </ul>
-        <ul *ngIf="rol_id==3 || rol_id==4">
+        <ul *ngIf="rol_id==3">
             <li>
                 <a routerLink="../perfil">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
                         <use xlink:href="bootstrap-icons.svg#person" />
                     </svg> Perfil
                 </a>
-                <!--
-                <ul class="list-unstyled collapse" id="profile-submenu">
-                    <li>
-
-                           <a routerLink="../perfil">Ver perfil</a> <a *ngIf="rol_id==1" href="#">Ver perfil</a>
-                        <a *ngIf="rol_id==2" href="#">Ver perfil</a>
-                        <a *ngIf="rol_id==3" routerLink="../perfil">Ver perfil</a>
-                        <a *ngIf="rol_id==4" href="../perfil">Ver perfil</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 2</a>
-                    </li>
-                    <li>
-                        <a href="#">Page 3</a>
-                    </li>
-                </ul>-->
             </li>
 
             <li>
@@ -66,31 +50,39 @@
                         <use xlink:href="bootstrap-icons.svg#clipboard-data" />
                     </svg> Ofertas
                 </a>
-                <ul *ngIf="rol_id==3" class="collapse list-unstyled" id="offer-submenu">
+                <ul class="collapse list-unstyled" id="offer-submenu">
                     <li>
                         <a routerLink="../ofertas">Ofertas</a>
                     </li>
                     <li>
                         <a href="#">Mis ofertas</a>
                     </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
                 </ul>
-                <ul *ngIf="rol_id==4" class="collapse list-unstyled" id="offer-submenu">
+            </li>
+        </ul>
+        <ul *ngIf="rol_id==4">
+            <li>
+                <a routerLink="../perfil">
+                    <svg class="bi text-info" width="20" height="20" fill="currentColor">
+                        <use xlink:href="bootstrap-icons.svg#person" />
+                    </svg> Perfil
+                </a>
+            </li>
+            <li>
+                <a href="#offer-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <svg class="bi text-info" width="20" height="20" fill="currentColor">
+                        <use xlink:href="bootstrap-icons.svg#clipboard-data" />
+                    </svg> Ofertas
+                </a>
+                <ul class="collapse list-unstyled" id="offer-submenu">
                     <li>
                         <a routerLink="../ofertas">Mis ofertas</a>
                     </li>
                     <li>
                         <a href="#">Candidatos</a>
                     </li>
-                    <li>
-                        <a href="#">3</a>
-                    </li>
                 </ul>
             </li>
-        </ul>
-        <ul>
             <li>
                 <a href="#company-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
