--- a/src/styles-light.scss
+++ b/src/styles-light.scss
@@ -1,7 +1,7 @@
 $primary: #003f5a;
-$secondary: #de6600;
+$secondary: #007a7a;
 $success: #28a745;
-$info: #fea02f;
+$info: #de6600;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #ebd9c8;
