--- a/src/app/pages/admin/areas-crud/modal/area-delete/area-delete.component.html
+++ b/src/app/pages/admin/areas-crud/modal/area-delete/area-delete.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header bg-info text-white">
+<div class="modal-header bg-secondary text-white">
     <h4 class="modal-title" id="modal-basic-title">Eliminar ciclo</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
         <svg class="bi text-white" width="32" height="32" fill="currentColor">
@@ -9,7 +9,7 @@
 <div class="modal-body">
     <p>¿Estas seguro que quieres eliminar este ciclo?</p>
     <div class="text-right">
-        <button type="submit" class="btn btn-info mr-2" (click)="confirmDelete()">
+        <button type="submit" class="btn btn-secondary mr-2" (click)="confirmDelete()">
             Eliminar
             <svg class="bi text-white" width="20" height="20" fill="currentColor">
                 <use xlink:href="bootstrap-icons.svg#x" />
