--- a/src/app/pages/admin/areas-crud/modal/area-update/area-update.component.html
+++ b/src/app/pages/admin/areas-crud/modal/area-update/area-update.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header bg-info text-white">
+<div class="modal-header bg-secondary text-white">
     <h4 class="modal-title" id="modal-basic-title">Modificar ciclo</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
         <svg class="bi text-white" width="32" height="32" fill="currentColor">
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="text-right">
-            <button type="submit " class="btn btn-info">
+            <button type="submit " class="btn btn-secondary">
                 Aceptar
                 <svg class="bi text-white" width="14" height="14" fill="currentColor">
                     <use xlink:href="bootstrap-icons.svg#save" />
