--- a/src/app/pages/alumno/student-offer/modal/offer-enroll/offer-enroll.component.html
+++ b/src/app/pages/alumno/student-offer/modal/offer-enroll/offer-enroll.component.html
@@ -1,4 +1,4 @@
-<div class="modal-header bg-info text-white">
+<div class="modal-header bg-secondary text-white">
     <h4 class="modal-title" id="modal-basic-title">Apuntarse a oferta</h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
         <svg class="bi text-white" width="32" height="32" fill="currentColor">
@@ -9,7 +9,7 @@
 <div class="modal-body">
     <p>¿Estas seguro que quieres apuntarte a esta oferta?</p>
     <div class="text-right">
-        <button type="submit" class="btn btn-info mr-2" (click)="confirmEnroll()">
+        <button type="submit" class="btn btn-secondary mr-2" (click)="confirmEnroll()">
             Apuntarse
             <svg class="bi text-white" width="20" height="20" fill="currentColor">
                 <use xlink:href="bootstrap-icons.svg#check" />
