--- a/src/app/pages/alumno/student-offer/student-offer.component.html
+++ b/src/app/pages/alumno/student-offer/student-offer.component.html
@@ -5,7 +5,7 @@
 
     <!-- Contenido de la pagina -->
     <div id="page-content-wrapper">
-        <!-- Botón para cerrar el sidebar -->       
+        <!-- Botón para cerrar el sidebar -->
         <div class="container my-5" *ngIf="isLoaded == false">
             <app-load-spinner></app-load-spinner>
         </div>
@@ -26,11 +26,11 @@
                                 <!-- Se muestra para las ofertas -->
                                 <ng-container>
                                     <div class="col-sm-6" *ngFor="let offer of offers; index as i">
-                                        <div class="card m-2 mb-4 border-secondary shadow" *ngIf="offer.vacant>0 ">
-                                            <div class="card-header bg-secondary text-white">
+                                        <div class="card m-2 mb-4 border-info shadow" *ngIf="offer.vacant>0 ">
+                                            <div class="card-header bg-info text-white">
                                                 <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}
                                                 </h3>
-                                                <span class="badge badge-light text-secondary mr-3 pull-right ">
+                                                <span class="badge badge-light text-info mr-3 pull-right ">
                                                     {{ offer.areaDescription }}
                                                 </span>
                                                 <span class="text-white font-weight-bolder">
@@ -49,7 +49,7 @@
                                             </div>
                                             <div class="card-footer p-0">
                                                 <div class="w-50 mx-auto">
-                                                    <button type="button" class="btn btn-secondary rounded-lg w-100"
+                                                    <button type="button" class="btn btn-info rounded-lg w-100"
                                                         (click)=offerEnroll(offer.id)>
                                                         Aceptar
                                                     </button>
