Carga de ofertas a las que el alumno está apuntado

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid">
+<footer class="container-fluid pt-5">
     <div class="bg-primary row text-white bold">
         <div class="mx-auto pt-3  ">
             © 2021
