--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,17 @@
 <!-- Header -->
 <div class="container-fluid  pt-3 zindex-dropdown about-us py-5 bg-light-dark ">
     <div class="row">
-        <div class="text-white bold col-md-6 ml-3 mb-4">
+        <div class="bold col-md-6 ml-3 mb-4" id="main-text">
             <h1 class='text-success'>Bienvenido!</h1>
             <h2>CIFP Virgen de Gracia</h2>
             <hr>
             <p>Ofrecemos ofertas de empleo y visivilidad a todos los alumnos de CIFP Virgen de Gracia.</p>
             <p>Somos un centro integrado de formacion profesional con un amplico catalogo de estudios .</p>
-            <button type="button" class="btn btn-secondary"><a href="https://cifpvirgendegracia.com/titulaciones/" >Oferta educativa</a></button>
+            <button type="button" class="btn btn-secondary"><a
+                    href="https://cifpvirgendegracia.com/titulaciones/">Oferta educativa</a></button>
         </div>
         <div class="col-md-5">
-            <img src="../../assets/jobs.png " alt=" Imagen decorativa">
+            <img class="img-fluid my-5" src="../../assets/jobs.png " alt=" Imagen decorativa">
         </div>
     </div>
 </div>
@@ -31,12 +32,13 @@
                         <!--Body-->
                         <div class="form-group">
                             <div class="input-group mb-2">
-                            <label for="nombre">
-                            </label>
-                            <div class="input-group-prepend">
-                                <div class="input-group-text"><i class="fa fa-user text-secondary"></i></div>
-                            </div>
-                            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre y Apellido" required>
+                                <label for="nombre">
+                                </label>
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text"><i class="fa fa-user text-secondary"></i></div>
+                                </div>
+                                <input type="text" class="form-control" id="nombre" name="nombre"
+                                    placeholder="Nombre y Apellido" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -44,7 +46,8 @@
                                 <div class="input-group-prepend">
                                     <div class="input-group-text"><i class="fa fa-envelope text-secondary"></i></div>
                                 </div>
-                                <input type="email" class="form-control" id="nombre" name="email" placeholder="ejemplo@gmail.com" required>
+                                <input type="email" class="form-control" id="nombre" name="email"
+                                    placeholder="ejemplo@gmail.com" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,7 +59,8 @@
                             </div>
                         </div>
                         <div class="text-center">
-                            <input type="submit" value="Enviar" class="text-white btn btn-secondary btn-block rounded-0 ">
+                            <input type="submit" value="Enviar"
+                                class="text-white btn btn-secondary btn-block rounded-0 ">
                         </div>
                     </div>
                 </div>
