cambio de colores

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <div class="container-fluid  pt-3 zindex-dropdown about-us py-5 bg-light-dark ">
     <div class="row">
-        <div class="bold col-md-6 ml-3 mb-4" id="main-text">
+        <div class="bold col-md-6 ml-3 mb-4 text" id="main-text">
             <h1 class='text-success'>Bienvenido!</h1>
             <h2>CIFP Virgen de Gracia</h2>
             <hr>
@@ -23,7 +23,7 @@
             <form method="post">
                 <div class="card border-primary rounded-0">
                     <div class="card-header p-0">
-                        <div class="bg-secondary text-white text-center py-2">
+                        <div class="bg-secondary text-white text-center">
                             <h3><i class="fa fa-envelope"></i> Contactanos</h3>
                             <p class="m-0">Con gusto te ayudaremos</p>
                         </div>
@@ -37,8 +37,7 @@
                                 <div class="input-group-prepend">
                                     <div class="input-group-text"><i class="fa fa-user text-secondary"></i></div>
                                 </div>
-                                <input type="text" class="form-control" id="nombre" name="nombre"
-                                    placeholder="Nombre y Apellido" required>
+                                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre y Apellido" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -46,8 +45,7 @@
                                 <div class="input-group-prepend">
                                     <div class="input-group-text"><i class="fa fa-envelope text-secondary"></i></div>
                                 </div>
-                                <input type="email" class="form-control" id="nombre" name="email"
-                                    placeholder="ejemplo@gmail.com" required>
+                                <input type="email" class="form-control" id="nombre" name="email" placeholder="ejemplo@gmail.com" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -59,8 +57,7 @@
                             </div>
                         </div>
                         <div class="text-center">
-                            <input type="submit" value="Enviar"
-                                class="text-white btn btn-secondary btn-block rounded-0 ">
+                            <input type="submit" value="Enviar" class="text-white btn btn-secondary btn-block rounded-0 ">
                         </div>
                     </div>
                 </div>
