--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="container-fluid pt-5">
-    <div class="bg-primary row text-white bold">
+<footer class="container-fluid bg-primary">
+    <div class=" row text-white bold">
         <div class="mx-auto pt-3  ">
             © 2021
             <a class="text-white bold footerLink" alt="CIFP Virgen de Gracia" title="CIFP Virgen de Gracia" target="_blank" href="https://bolsatrabajo.com/">CIFP Virgen de Gracia</a>
