--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,8 +1,6 @@
-<div id="themeChanger" class="">
+<div id="themeChanger" class="p-0 m-0">
     <app-navbar>
     </app-navbar>
-
     <router-outlet></router-outlet>
-
     <app-footer></app-footer>
 </div>
