--- a/src/styles-light.scss
+++ b/src/styles-light.scss
@@ -6,40 +6,24 @@ $warning: #ffc107;
 $danger: #dc3545;
 $light: #ebd9c8;
 $dark: black;
-
 $link-color: blue;
-
-.card-footer {
-    overflow: hidden;
-}
-
-.badge {
-    white-space: initial !important;
-}
-
-.pagination {
-    width: fit-content;
-    margin: auto;
-}
-
 app-root #themeChanger.light {
-  
-    .btn.btn-primary{      
+    .text {
+        color: black;
+        font-weight: bold;
+        font-size: 20px;
+    }
+    .btn.btn-primary {
         border: 3px solid #fff;
     }
-
-    .btn {        
+    .btn {
         transition: all ease 0.2s;
     }
-
     .btn:hover {
         transform: scale(1.1);
         box-shadow: 2px 2px 2px black;
     }
-        
     .btn.btn-aside.active {
         background-color: $dark;
     }
-
 }
-  
