--- a/src/app/pages/alumno/student-interview/student-interview.component.html
+++ b/src/app/pages/alumno/student-interview/student-interview.component.html
@@ -17,25 +17,32 @@
                     <div class="card w-100 mb-4 shadow">
                         <div class="card-header bg-secondary">
                             <div class="d-flex align-items-center">
-                                <h2 class="card-title text-white font-weight-bold my-2 mr-3">Ofertas activas</h2>
+                                <h2 class="card-title text-white font-weight-bold my-2 mr-3">Mis ofertas</h2>
                             </div>
                         </div>
                         <div class="card-body mt-2">
                             <!-- Oferta -->
                             <div class="row">
                                 <!-- Se muestra para las ofertas -->
+                                <ngb-pagination class="col-12 mb-3" [(page)]="page" [pageSize]="pageSize"
+                                    [collectionSize]="offers.length" [boundaryLinks]="true">
+                                </ngb-pagination>
                                 <ng-container>
-                                    <div class="col-sm-6" *ngFor="let offer of offers | slice: (page-1) * pageSize : page * pageSize">
+                                    <div class="col-sm-6"
+                                        *ngFor="let offer of offers | slice: (page-1) * pageSize : page * pageSize">
                                         <div class="card m-2 mb-4 border-info shadow" *ngIf="offer.vacant>0 ">
                                             <div class="card-header bg-info text-white">
                                                 <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}
                                                 </h3>
-                                                <span class="badge badge-light text-info mr-3 pull-right ">
-                                                    {{ offer.areaDescription }}
-                                                </span>
-                                                <span class="text-white font-weight-bolder">
-                                                    Vacantes: {{ offer.vacant }}
-                                                </span>
+                                                <p class="mb-0">
+                                                    <a class="badge badge-light text-info mr-3 mb-2 text-uppercase pull-right "
+                                                        (click)="viewCompany(offer.companyId)">
+                                                        {{ offer.companyName }}
+                                                    </a>
+                                                    <span class="badge badge-light text-info mr-3 pull-right ">
+                                                        {{ offer.areaDescription }}
+                                                    </span>
+                                                </p>
                                             </div>
                                             <div class="card-body">
                                                 <div class="row mb-4">
@@ -48,10 +55,19 @@
                                                 </div>
                                             </div>
                                             <div class="card-footer p-0">
-                                                <div class="w-50 mx-auto">
-                                                    <button type="button" class="btn btn-info rounded-lg w-100"
-                                                        (click)=offerEnroll(offer.id)>
+                                                <div class="btn-group w-100">
+                                                    <button *ngIf="offer.Joined_by == 0" type="button"
+                                                        title="Desinscribirse de oferta"
+                                                        class="btn btn-danger rounded-0" (click)="unsubscribe(offer)">
+                                                        Desinscribirse
+                                                    </button>
+                                                    <button *ngIf="offer.Joined_by == 1" type="button"
+                                                        title="Aceptar oferta" class="btn btn-success rounded-0">
                                                         Aceptar
+                                                    </button>
+                                                    <button *ngIf="offer.Joined_by == 1" title="Desactivar usuario"
+                                                        type="button" class="btn btn-danger rounded-0">
+                                                        Rechazar
                                                     </button>
                                                 </div>
                                             </div>
@@ -61,8 +77,10 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length"></ngb-pagination>
-                            
+                            <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length"
+                                [boundaryLinks]="true">
+                            </ngb-pagination>
+
                         </div>
                     </div>
                 </div>
