--- a/src/app/pages/alumno/student-interview/student-interview.component.html
+++ b/src/app/pages/alumno/student-interview/student-interview.component.html
@@ -58,15 +58,19 @@
                                                 <div class="btn-group w-100">
                                                     <button *ngIf="offer.Joined_by == 0" type="button"
                                                         title="Desinscribirse de oferta"
-                                                        class="btn btn-danger rounded-0" (click)="unsubscribe(offer)">
+                                                        class="btn btn-danger rounded-0"
+                                                        (click)="unsubscribe(offer.interId)">
                                                         Desinscribirse
                                                     </button>
-                                                    <button *ngIf="offer.Joined_by == 1" type="button"
-                                                        title="Aceptar oferta" class="btn btn-success rounded-0">
+                                                    <button *ngIf="offer.Joined_by == 1 && offer.interActive == 0"
+                                                        type="button" title="Aceptar oferta"
+                                                        class="btn btn-success rounded-0"
+                                                        (click)="acept(offer.interId)">
                                                         Aceptar
                                                     </button>
                                                     <button *ngIf="offer.Joined_by == 1" title="Desactivar usuario"
-                                                        type="button" class="btn btn-danger rounded-0">
+                                                        type="button" class="btn btn-danger rounded-0"
+                                                        (click)="unsubscribe(offer.interId)">
                                                         Rechazar
                                                     </button>
                                                 </div>
