--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,4 +1,4 @@
-<div id="themeChanger" class="p-0 m-0">
+<div id="themeChanger" class="">
     <app-navbar>
     </app-navbar>
     <router-outlet></router-outlet>
