--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,20 +1,18 @@
-<div class="container my-3">
+<div class="container  bg-light-dark ">
     <div *ngIf="animate">
         <app-load-spinner></app-load-spinner>
     </div>
-    <div *ngIf="!animate" class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-secondary ">
+    <div *ngIf="!animate" class="pt-4 row justify-content-center ">
+        <div class="col-md-4">
+            <div class="card ">
+                <div class="card-header bg-secondary text-center">
                     <h2 class="card-title text-white mb-0">Acceso</h2>
                 </div>
                 <div class="card-body">
-
                     <form [formGroup]="newLogin" (ngSubmit)="onSubmit()">
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" formControlName="email" class="form-control"
-                                [class]="isValidField('email')" />
+                            <input type="email" formControlName="email" class="form-control" [class]="isValidField('email')" />
                             <div *ngIf="submitted && form.email.errors">
                                 <div>El correo: </div>
                                 <div *ngIf="form.email.errors.required">No puede estar vacío</div>
@@ -23,26 +21,17 @@
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" formControlName="password" class="form-control"
-                                [class]="isValidField('password')" />
+                            <input type="password" formControlName="password" class="form-control" [class]="isValidField('password')" />
                             <div *ngIf="submitted && form.password.errors">
                                 <div>La contraseña: </div>
                                 <div *ngIf="form.password.errors.required">No puede estar vacío</div>
                                 <div *ngIf="form.password.errors?.min">Longuitud mínima 8 caracteres</div>
                             </div>
                         </div>
-
                         <div>
-
-                            <div class="text-right">
-                                <button type="submit" class="btn btn-secondary mr-2">
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-secondary ">
                                     Enviar
-                                    <svg class="bi text-white" width="14" height="14" fill="currentColor">
-                                        <use xlink:href="bootstrap-icons.svg#save" />
-                                    </svg>
-                                </button>
-                                <button type="reset" (click)="cancel()" class="btn btn-danger">
-                                    Volver
                                     <svg class="bi text-white" width="14" height="14" fill="currentColor">
                                         <use xlink:href="bootstrap-icons.svg#save" />
                                     </svg>
@@ -53,7 +42,6 @@
                     </form>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
