--- a/src/app/pages/admin/users-crud/users-crud.component.html
+++ b/src/app/pages/admin/users-crud/users-crud.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div class="container-fluid ">
     <app-load-spinner *ngIf="loaded==false"></app-load-spinner>
-    <div *ngIf="loaded" class="row my-5">
+    <div *ngIf="loaded" class="row my-5 ">
         <div class="col">
             <div class="card w-100 mb-4 shadow">
                 <div class="card-header bg-secondary">
@@ -8,14 +8,14 @@
                         <h2 class="card-title text-white font-weight-bold my-2 mr-3">Usuarios</h2>
                     </div>
                 </div>
-                <div class="card-body mt-2">
+                <div class="card-body bg-light-dark">
                     <div class="row">
                         <div class="col-sm-12 col-md-6" *ngFor="let user of users">
                             <div class="card m-2 mb-4 border-secondary shadow">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="text-secondary">
+                                            <p class="text text-secondary">
                                                 Usuario {{user.id}}
                                             </p>
                                             <p class="card-text">
@@ -32,29 +32,25 @@
                                 </div>
                                 <div class="card-footer p-0">
                                     <div class="btn-group w-100">
-                                        <button type="button" title="Editar usuario" class="btn btn-secondary rounded-0">
+                                        <button type="button" title="Editar usuario" class="btn btn-secondary btn-border rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userUpdate(user)>
                                                 <use xlink:href="bootstrap-icons.svg#pencil" />
                                             </svg>
                                         </button>
-                                        <button [disabled]="loginService.user.user_id == user.id" type="button"
-                                            title="Eliminar usuario" class="btn btn-danger rounded-0">
+                                        <button [disabled]="loginService.user.user_id == user.id" type="button" title="Eliminar usuario" class="btn btn-border btn-danger rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userDelete(user.id)>
                                                 <use xlink:href="bootstrap-icons.svg#x" />
                                             </svg>
                                         </button>
-                                        <button [disabled]="loginService.user.user_id == user.id"
-                                            title="Desactivar usuario" *ngIf="user.isActive == 1" type="button"
-                                            class="btn btn-success rounded-0">
+                                        <button [disabled]="loginService.user.user_id == user.id" title="Desactivar usuario" *ngIf="user.isActive == 1" type="button" class="btn-border btn btn-success rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userActive(user.id,0)>
                                                 <use xlink:href="bootstrap-icons.svg#check-square" />
                                             </svg>
                                         </button>
-                                        <button *ngIf="user.isActive == 0" type="button" title="Activar usuario"
-                                            class="btn btn-danger rounded-0">
+                                        <button *ngIf="user.isActive == 0" type="button" title="Activar usuario" class="btn-border btn btn-danger rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userActive(user.id,1)>
                                                 <use xlink:href="bootstrap-icons.svg#square" />
