--- a/src/styles-dark.scss
+++ b/src/styles-dark.scss
@@ -1,8 +1,9 @@
 $primary-dark: #1a1a2e;
-$secondary-dark: #e94560;
-$success-dark: #e6e2cd;
+$secondary-dark: #84142d;
+$secondary-dark-50: #853446;
+$success-dark: #29c7ac;
 $info-dark: #0f3460;
-$warning-dark: red;
+$warning-dark: #c02739;
 $danger-dark: red;
 $light-dark: #16213e;
 $dark: #213742;
@@ -13,8 +14,15 @@ app-root #themeChanger.dark {
         font-weight: bold;
         font-size: 20px;
     }
+    .text-card {
+        font-size: 16px;
+        color: black;
+    }
     .btn.btn-primary {
         border: 3px solid #fff;
+    }
+    .bg-secondary-50 {
+        background-color: $secondary-dark-50;
     }
     .btn {
         transition: all ease 0.2s;
@@ -41,8 +49,8 @@ app-root #themeChanger.dark {
         background-color: $light;
     }
     .navbar {
-        box-shadow: 5px 5px 25px $success-dark;
-        opacity: 95%; //90%
+        box-shadow: 4px 4px 10px white;
+        opacity: 90%; //90%
     }
     .bg-light-dark {
         background-color: $light-dark !important;
