--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,8 +19,22 @@
     font-size: 20px;
 }
 
+.container {
+    min-height: calc(100vh - (145px));
+    min-width: 100%;
+    margin: 0 auto;
+}
+
 body {
     background-color: $light !important;
+}
+
+.text {
+    font-size: 16px;
+}
+
+.btn-border {
+    border: $light solid 2px;
 }
 
 .card-footer {
